deploy/aro/catalog-api/catalog-public-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: catalogapi
  name: catalog-public-route
spec:
  host: __CatalogPublicHostName__
  tls:
    caCertificate: |
      __CaCertificate2__
    certificate: |
      __Certificate2__
    key: |
      __PrivateKey2__
    termination: edge
  to:
    kind: Service
    name: catalogapi
    weight: 100
  wildcardPolicy: None
